[package]
name = "fanbox-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.8.1", features = ["chrono", "json"] }
chrono = "0.4.38"
url = { version = "2.5.0", features = ["serde"] }
indicatif = "0.17.8"
log = "0.4.21"
env_logger = "0.11.3"
clap-verbosity-flag = "2.2.0"
mime_guess = "2.0.4"
mime = "0.3.17"
dotenv = "0.15.0"
indicatif-log-bridge = "0.2.2"
