[package]
name = "fanbox-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
url = { version = "2.5.0", features = ["serde"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
indicatif = "0.17.8"
log = "0.4.21"
env_logger = "0.11.3"
clap-verbosity-flag = "2.2.0"
mime_guess = "2.0.4"
mime = "0.3.17"
dotenv = "0.15.0"
indicatif-log-bridge = "0.2.2"
reqwest-retry = "0.5.0"
reqwest-middleware = { version = "0.3.1", features = ["json"] }
post-archiver = "0.1.11"
