[package]
name = "fanbox-archive"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "A Fanbox Download and Archiver"
authors = ["xiao-e-yun <a0970323059@gmail.com>"]
repository = "https://github.com/xiao-e-yun/FanboxArchive"


[dependencies]
post-archiver = { version = "0.3", features = ["importer"] }
# other dependencies
chrono = { version = "0.4.38", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive", "env"] }
log = "0.4.21"
dotenv = "0.15.0"
env_logger = "0.11.3"
clap-verbosity-flag = "2.2.0"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-retry = "0.5.0"
reqwest-middleware = { version = "0.3.1", features = ["json"] }
mime_guess = "2.0.5"
